--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,9 @@
 
     "baseUrl": ".",
     "paths": {
-      "#/*": ["src/*"]
+      "#/*": ["src/*"],
+      "@nillion/nilai-ts": ["src/index.ts"]
     }
   },
-  "include": ["./src/**/*.ts", "./tests/**/*.ts"]
+  "include": ["./src/**/*.ts", "./tests/**/*.ts", "./examples/**/*.ts"]
 }
