--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
+    "./polyfills": {
+      "types": "./dist/polyfills.d.ts",
+      "import": "./dist/polyfills.js"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
@@ -51,13 +55,13 @@
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "dotenv": "^16.5.0",
+    "dotenv": "17.2.0",
     "eslint": "^9.29.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.9"
+    "vitest": "3.2.4"
   },
   "dependencies": {
     "@nillion/nuc": "0.1.0-rc.8",
@@ -65,5 +69,8 @@
     "@noble/secp256k1": "^2.3.0",
     "openai": "^5.3.0",
     "zod": "^3.25.64"
+  },
+  "optionalDependencies": {
+    "buffer": "^6.0.3"
   }
 }
