fix: various fixes for phase 1 release

--- a/biome.json
+++ b/biome.json
@@ -65,6 +65,16 @@
           }
         }
       }
+    },
+    {
+      "includes": ["**/src/client.ts", "**/src/internal/debug_client.ts"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noExplicitAny": "off"
+          }
+        }
+      }
     }
   ]
 }
