--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "@nillion/nilai-ts",
   "version": "0.2.0-alpha.1",
   "description": "Nilai Typescript SDK",
-  "type": "module",
+  "type": "commonjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "require": "./dist/index.js"
     },
     "./polyfills": {
       "types": "./dist/polyfills.d.ts",
-      "import": "./dist/polyfills.js"
+      "require": "./dist/polyfills.js"
     },
     "./package.json": "./package.json"
   },
