--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nillion/nilai-ts",
-  "version": "0.2.0-alpha.1",
+  "version": "0.2.0",
   "description": "Nilai Typescript SDK",
   "type": "module",
   "main": "./dist/index.cjs",
